# neuralDrawer

./: .gitignore  README
src/: CMakeLists.txt  coeffs_column_hash.h  coeffs_full_hash.h  coeffs_list.h  coeffs_map.h  extended_array.h  field.cpp  field.h  main.cpp  main_controller.cpp  main_controller.h  neural_network.cpp  neural_network.h  neuron.cpp  neuron.h  sdl_controller.cpp  sdl_controller.h
